images in views fixed in addition to setting vh of 150 in products-container to avoid overlapping in product index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -124,6 +124,10 @@ a {color:#696969;}
   margin-top: 2rem;
 }
 
+.products-container {
+  margin: 0 auto;
+  height: 150vh;
+}
 
 // .footer {
 //   position: fixed;
