--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -17,11 +17,6 @@
     // border: 2px solid black;
 }
 
-.card-img-top {
-  width: 18rem;
-  height: 16rem;
-}
-
 /* The "show" class is added to the filtered elements */
 .show {
     display: block;
